[package]
name = "s3fs"
version = "0.1.0"
authors = ["Antonio Yang <antonio.yang@siliconmotion.com.tw>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/yanganto/s3fs"

[dependencies]
fuse = "^0.3.1"
colored = "^1.6.1"
time = "^0.1.42"
libc = "^0.2.48"
ctrlc = "^3.1.1"
crossbeam-channel = "^0.3.8"
users = "^0.8"
s3handler = "0.1.1"
toml = "^0.4"
serde = "1.0.43"
serde_derive = "1.0.43"
log = "^0.4"

# Patch for s3handler
# [patch.crates-io]
# s3handler = { path = "../s3handler" }
# s3handler = { git = "https://github.com/yanganto/s3handler", branch = "master" }
